--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="carousel-item">
         <div class="slide-image">
-          <img src="slide2.png" alt="Slide Image">
+          <img src="slide2.PNG" alt="Slide Image">
           <div class="overlay">
             <div class="container">
               <div class="row">
@@ -88,7 +88,7 @@
       </div>
       <div class="carousel-item">
         <div class="slide-image">
-          <img src="slide3.png" alt="Slide Image">
+          <img src="slide3.PNG" alt="Slide Image">
           <div class="overlay">
             <div class="container">
               <div class="row">
