--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card">
-            <img src="image1.png" class="card-img-top" alt="Service 1">
+            <img src="Image1.png" class="card-img-top" alt="Service 1">
             <div class="card-body">
               <h5 class="card-title">Haircut</h5>
               <p class="card-text">Get a trendy haircut from our professional barbers.</p>
@@ -130,7 +130,7 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="image2.png" class="card-img-top" alt="Service 2">
+            <img src="Image2.png" class="card-img-top" alt="Service 2">
             <div class="card-body">
               <h5 class="card-title">Beard Trim</h5>
               <p class="card-text">Get your beard trimmed and styled by our experts.</p>
@@ -140,7 +140,7 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="image3.png" class="card-img-top" alt="Service 3">
+            <img src="Image3.png" class="card-img-top" alt="Service 3">
             <div class="card-body">
               <h5 class="card-title">Shave</h5>
               <p class="card-text">Experience a classic shave with hot towels and straight razors.</p>
